@@ -1,3 +1,7 @@
+2020-03-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test10-write-region): Extend test.
+
 2020-02-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.3.2 released.
